able to run requests with API

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Words</title>
   </head>
   <body>
+
+  <h1>Think of a Word</h1>
+
+  <ul>
+    <li>
+      
+    </li>
+  </ul>
+
+
     <script src="script.js"></script>
   </body>
 </html>
