--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Words</title>
+    <title>Jokes</title>
   </head>
   <body>
 
-  <h1>Think of a Word</h1>
+  <h1>A Joke a Refresh</h1>
 
-  <h2></h2>
+  <!-- <h2><span id="setup"></span></h2> -->
   
 
 
