have placeholder info

--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
 
   <h1>A Joke a Refresh</h1>
 
+  <div id="display-data"></div>
+
   <!-- <h2><span id="setup"></span></h2> -->
   
 
 
-    <script >
-      fetch ('https://official-joke-api.appspot.com/random_joke').then(function (response){
-        return response.json();
-      }).then(function (obj){
-        console.log(obj)
-      })
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
