only seeing array

--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jokes</title>
+    <title>Info</title>
   </head>
   <body>
 
-  <h1>A Joke a Refresh</h1>
+  <h1>Museum Info</h1>
 
-  <div id="display-data"></div>
-
-  <!-- <h2><span id="setup"></span></h2> -->
   
 
 
