displaying all desired sections

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <title>Info</title>
   </head>
   <body>
-
-  <h1>Museum Info</h1>
+    <h1>Museum Info</h1>
 
     <h2 class="section1"></h2>
 
+    <h2 class="section2"></h2>
+
+    <h2 class="section3"></h2>
+
+    <h2 class="section4"></h2>
 
     <script src="script.js"></script>
   </body>
