--- a/index.html
+++ b/index.html
@@ -12,11 +12,43 @@
 
     <h2 class="section1"></h2>
 
+    <ul>
+      <li>Item 1</li>
+
+      <li>Item 2</li>
+
+      <li>Item 3</li>
+    </ul>
+
     <h2 class="section2"></h2>
+
+    <ul>
+      <li>Item 1</li>
+
+      <li>Item 2</li>
+
+      <li>Item 3</li>
+    </ul>
 
     <h2 class="section3"></h2>
 
+    <ul>
+      <li>Item 1</li>
+
+      <li>Item 2</li>
+
+      <li>Item 3</li>
+    </ul>
+
     <h2 class="section4"></h2>
+
+    <ul>
+      <li>Item 1</li>
+
+      <li>Item 2</li>
+
+      <li>Item 3</li>
+    </ul>
 
     <script src="script.js"></script>
   </body>
