seperating required information

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2 class="section1"></h2>
 
     <ul>
-      <li class="item1">Item 1</li>
+      <li class="title1">Item 1</li>
     </ul>
 
     <h2 class="section2"></h2>
